Default time in entries, recorded_at_day now unique

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -2,7 +2,8 @@
 
 <p>
   <strong>Recorded at:</strong>
-  <%= @entry.recorded_at %>
+  <%= @entry.recorded_at_date %>
+  <%= @entry.recorded_at_time %>
 </p>
 
 <p>
