--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,7 @@
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :username, required: true %>
+    <%= f.input :default_time, required: true %>
     <%= f.input :password, required: true %>
     <%= f.input :password_confirmation, required: true %>
   </div>
