--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@entry) do |f| %>
+<%= simple_form_for(@entry) do |f| %>
   <% if @entry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
@@ -12,8 +12,9 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :recorded_at %><br>
-    <%= f.datetime_select :recorded_at %>
+    <%= f.input :recorded_at_date %><br>
+    <%= f.input :manual_time %><br>
+    <%= f.input :recorded_at_time %><br>
   </div>
   <div class="field">
     <%= f.label :temperature %><br>
