--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,9 +1,68 @@
 <h1 class="page-header">Entries by <%= current_user.username %></h1>
 
+<div id="entries_chart" style="width:100%; height:400px;"></div>
+
+<script type="text/javascript" charset="utf-8">
+$(function () { 
+    $('#entries_chart').highcharts({
+ 
+        title: {
+            text: 'Stuff per Entry'
+        },
+        xAxis: {
+          minorTickInterval: 'auto',
+            type: "datetime"
+        },
+        yAxis: {
+          minorTickInterval: 'auto',
+          title: {
+                text: 'Scale'
+            }
+        },
+        tooltip: {
+          backgroundColor: '#FCFFC5',
+          borderColor: 'black',
+          borderRadius: 10,
+          borderWidth: 3,
+          crosshairs:
+          [{
+                width: '5%',
+                color: '#f4f4f4',
+                shared: true,
+            }],
+          formatter: function() {
+            return Highcharts.numberFormat(this.y, 1) +  '°';
+          }
+        },
+        series: [
+          {
+          type: 'line',
+          name: 'Temperatures',
+          pointInverval: <%= 1.day * 1000 %>, 
+          pointStart: <%= 4.weeks.ago.to_i * 1000 %>,
+          data: <%= (4.weeks.ago.to_date..Date.today).map { |date| Entry.temperature(date).to_f }.inspect %>,
+          marker: {
+            lineWidth: 4,
+            lineColor: Highcharts.getOptions().colors[7],
+            fillColor: 'red'
+            }
+        },{
+          type: 'column',
+          name: 'Intercourse',
+          pointInverval: <%= 1.day * 1000 %>, 
+          pointStart: <%= 4.weeks.ago.to_i * 1000 %>,
+          data: <%= (4.weeks.ago.to_date..Date.today).map { |date| Entry.id(date).to_i }.inspect %>,
+        }
+        ]
+    }); end // highcharts
+}); // end function
+</script>
+
+
+
 <table>
   <thead>
     <tr>
-      <th>Username</th>
       <th>Recorded at</th>
       <th>Temperature</th>
       <th>Disturbed</th>
@@ -35,8 +94,7 @@
   <tbody>
     <% @entries.each do |entry| %>
       <tr>
-        <td><%= entry.user.username %></td>
-        <td><%= entry.recorded_at %></td>
+        <td><%= entry.recorded_at_time.strftime("%H:%M") %> | <%= entry.recorded_at_date %> </td>
         <td><%= entry.temperature %></td>
         <td><%= entry.disturbed %></td>
         <td><%= entry.intercourse %></td>
@@ -67,7 +125,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Entry', new_entry_path %>
